# Baller-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: superlinter.yml
dep/: glad.c
include/: camera.hpp  collider.hpp  controller.hpp  gameObjects.hpp  physicsEngine.hpp  shader.hpp
lib/: libraylib.so.550
src/: GLFWTest.cpp  README.md  camera.cpp  controller.cpp  controlsNotifier.py  gameObjects.cpp  main.cpp  main.cpp.1  shader.cpp
src/shader/: VertexShader.vert  ball.frag  fragment.frag  fragment1.frag  fragment2.frag  vertex.vert
tests/: gameObjectsTest.cpp  physicsEngineTest.cpp
