cmake_minimum_required(VERSION 3.10)
project(BallerEngine VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g -DDEBUG -lglfw -lGL -lX11 -lpthread -lXrandr -lXi -ldl")
include_directories(include)
link_directories(lib)
add_executable(BallerEngine src/main.cpp src/camera.cpp)
target_link_libraries(BallerEngine ${CMAKE_SOURCE_DIR}/lib/libraylib.so.5.5.0)

